# GoPro_Stereo

./: CMakeLists.txt  mainpage.dox  manifest.xml
launch/: GoPro_Stereo.launch  show_image.launch
msg/: pos2d.msg  pos3d.msg
msg_gen/cpp/include/GoPro_Stereo/: pos2d.h  pos3d.h
msg_gen/lisp/: GoPro_Stereo-msg.asd  _package.lisp  _package_pos2d.lisp  _package_pos3d.lisp  pos2d.lisp  pos3d.lisp
src/: exif.h  get_filename.cpp  gopro_stereo.cpp  gopro_triangulate.cpp  image_publisher.cpp  shootnw.sh
src/GoPro_Stereo/msg/: __init__.py  _pos2d.py  _pos3d.py
